RESOLVED FIXED25874
Mac Chromium crashes when opening HTML selects containing zero items
https://bugs.webkit.org/show_bug.cgi?id=25874
Summary Mac Chromium crashes when opening HTML selects containing zero items
Paul Godavari
Reported 2009-05-19 13:58:55 PDT
Mac Chromium crashes when opening HTML selects containing zero items.
Attachments
Fix for zero item popup crash (1.21 KB, patch)
2009-05-19 14:01 PDT, Paul Godavari
dglazkov: review+
Paul Godavari
Comment 1 2009-05-19 14:01:18 PDT
Created attachment 30482 [details] Fix for zero item popup crash
Dimitri Glazkov (Google)
Comment 2 2009-05-19 14:14:16 PDT
Note You need to log in before you can comment on or make changes to this bug.