2009-05-19  Paul Godavari  <paul@chromium.org>

Reviewed by Dimitri Glazkov.

        Fix a crash in Mac Chromium when displaying an HTML select element
        with no items.
        https://bugs.webkit.org/show_bug.cgi?id=25874

        * platform/chromium/PopupMenuChromium.cpp:
        (WebCore::PopupContainer::showExternal):

Canonical link: https://commits.webkit.org/35789@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@43874 268f45cc-cd09-0410-ab3c-d52691b4dbfc